# mySparkyEngine

./: CMakeLists.txt  README.md
sparky-core/: CMakeLists.txt  main.cpp
sparky-core/src/: CMakeLists.txt
sparky-core/src/graphics/: CMakeLists.txt  batchrenderer2d.cpp  batchrenderer2d.h  renderable2d.cpp  renderable2d.h  renderer2d.h  shader.cpp  shader.h  simple2drenderer.cpp  simple2drenderer.h  sprite.cpp  sprite.h  staticsprite.cpp  staticsprite.h  window.cpp  window.h
sparky-core/src/graphics/buffers/: CMakeLists.txt  buffer.cpp  buffer.h  indexBuffer.cpp  indexBuffer.h  vertexArray.cpp  vertexArray.h
sparky-core/src/graphics/layers/: CMakeLists.txt  group.cpp  group.h  layer.cpp  layer.h  tilelayer.cpp  tilelayer.h
sparky-core/src/math/: CMakeLists.txt  mat4.cpp  mat4.h  math.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
sparky-core/src/shaders/: basic.frag  basic.vert
sparky-core/src/utils/: fileutils.h  timer.h
