CMAKE_MINIMUM_REQUIRED (VERSION 3.1)

PROJECT(sparky)

IF (COMMAND CMAKE_POLICY)
	CMAKE_POLICY (SET CMP0003 NEW)
ENDIF (COMMAND CMAKE_POLICY)

# set the output folder
IF (WIN32)
	SET (CURRENT_CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}/bin/windows)
ELSE ()
	SET (CURRENT_CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}/bin/linux)
ENDIF()

# GLEW library
FIND_PACKAGE (GLEW REQUIRED)
IF (GLEW_FOUND)
	INCLUDE_DIRECTORIES (${GLEW_INCLUDE_DIRS})
	LINK_LIBRARIES (${GLEW_LIBRARIES})
ENDIF()

# GLFW library
FIND_PACKAGE (glfw3 REQUIRED)
INCLUDE_DIRECTORIES (${GLFW_INCLUDE_DIRS})

#OpenGL
FIND_PACKAGE (OpenGL REQUIRED)
INCLUDE_DIRECTORIES (${OPENGL_INCLUDE_DIRS})

SET (EXECUTABLE_OUTPUT_PATH ${CURRENT_CMAKE_BINARY_DIR})
SET (LIBRARY_OUTPUT_PATH ${CURRENT_CMAKE_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(sparky-core)
